tests/data/placebo/test_network_location_resource_missing/ec2.CreateNetworkInterface_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {},
    "NetworkInterface": {
      "Status": "pending",
      "MacAddress": "0e:34:db:fe:6a:1a",
      "SourceDestCheck": true,
      "AvailabilityZone": "us-east-1b",
      "Description": "",
      "NetworkInterfaceId": "eni-5d45e48b",
      "PrivateIpAddresses": [
        {
          "Primary": true,
          "PrivateIpAddress": "10.4.9.76"
        }
      ],
      "RequesterManaged": false,
      "SubnetId": "subnet-dbbb0d81",
      "VpcId": "vpc-9760deee",
      "RequesterId": "AIDAIYEUEZZQWE5TZHHAE",
      "Groups": [
        {
          "GroupName": "web-tier",
          "GroupId": "sg-8b2f81fa"
        }
      ],
      "Ipv6Addresses": [],
      "OwnerId": "644160558196",
      "TagSet": [],
      "PrivateIpAddress": "10.4.9.76"
    }
  }
}
