tests/data/placebo/test_network_location_resource_missing/ec2.CreateSecurityGroup_1.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-8b2f81fa",
    "ResponseMetadata": {}
  }
}
