tests/data/placebo/test_network_location_resource_missing/ec2.CreateSubnet_1.json
{
  "status_code": 200,
  "data": {
    "Subnet": {
      "AvailabilityZone": "us-east-1b",
      "AvailableIpAddressCount": 251,
      "DefaultForAz": false,
      "Ipv6CidrBlockAssociationSet": [],
      "VpcId": "vpc-9760deee",
      "State": "pending",
      "MapPublicIpOnLaunch": false,
      "SubnetId": "subnet-dbbb0d81",
      "CidrBlock": "10.4.9.0/24",
      "AssignIpv6AddressOnCreation": false
    },
    "ResponseMetadata": {}
  }
}
