tests/data/placebo/test_network_location_resource_missing/tagging.GetResources_2.json
{
    "status_code": 200, 
    "data": {
        "PaginationToken": "", 
        "ResourceTagMappingList": [
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:subnet/subnet-05cf9b60", 
                "Tags": [
                    {
                        "Value": "FancyTestSubnetC", 
                        "Key": "Name"
                    }, 
                    {
                        "Value": "tagfanncyvalue", 
                        "Key": "tagfancykey"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:subnet/subnet-6f273034", 
                "Tags": [
                    {
                        "Value": "FancyTestSubnetPrivate", 
                        "Key": "Name"
                    }, 
                    {
                        "Value": "Private", 
                        "Key": "NetworkLocation"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:subnet/subnet-71bda45c", 
                "Tags": [
                    {
                        "Value": "FancyTestSubnetD", 
                        "Key": "Name"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:subnet/subnet-dbbb0d81", 
                "Tags": [
                    {
                        "Value": "web", 
                        "Key": "Location"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:subnet/subnet-ecfb30a4", 
                "Tags": [
                    {
                        "Value": "FancyTestSubnetPublic", 
                        "Key": "Name"
                    }, 
                    {
                        "Value": "Public", 
                        "Key": "NetworkLocation"
                    }
                ]
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "d35c980d-5a9f-11e7-b138-4f6114fa3f12", 
            "HTTPHeaders": {
                "x-amzn-requestid": "d35c980d-5a9f-11e7-b138-4f6114fa3f12", 
                "date": "Mon, 26 Jun 2017 18:46:54 GMT", 
                "content-length": "820", 
                "content-type": "application/x-amz-json-1.1"
            }
        }
    }
}
