tests/data/placebo/test_network_location_resource_missing/tagging.TagResources_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {
      "RetryAttempts": 0,
      "HTTPStatusCode": 200,
      "RequestId": "913eb15f-77c7-42ed-9813-fd08fd4af6e8",
      "HTTPHeaders": {
        "server": "AmazonEC2",
        "content-type": "application/x-amz-json-1.1",
        "date": "Mon, 26 Jun 2017 18:46:52 GMT",
        "content-length": "25",
        "x-amzn-requestid": "913eb15f-77c7-42ed-9813-fd08fd4af6e8"
      }
    }
  }
}
